tests/017_and_eq.out
tests/017_and_eq.pan:53:1-3: error:
  â€¢ Unable to validate verification condition for f8
tests/017_and_eq.pan:59:1-3: error:
  â€¢ Unable to validate verification condition for f9
f0 : {z:ğ”¹ | z = true}
f1 : {z:ğ”¹ | z = false}
f2 : {x:â„¤ | true} â†’ {z:ğ”¹ | z = true âŸº x = 1}
f3 : {x:â„¤ | x = 1} â†’ {z:ğ”¹ | z = true}
f4 : {x:â„¤ | x = 2} â†’ {z:ğ”¹ | z = false}
f5 : {x:â„¤ | x = 1} â†’ {z:ğ”¹ | z = true}
f6 : {x:â„¤ | x â‰  1} â†’ {z:ğ”¹ | z = false}
f7 : {x:â„¤ | x = 1} â†’ {z:ğ”¹ | z = true}
f10 : {x:â„¤ | x = 2} â†’ {z:ğ”¹ | z = false}
f11 : {x:â„¤ | true} â†’ {y:â„¤ | true} â†’ {z:ğ”¹ | z = true âŸº (x = 1 âˆ§ y = 1)}
f12 : {x:â„¤ | x = 1} â†’ {y:â„¤ | true} â†’ {z:ğ”¹ | z = true âŸº y = 1}
f13 : {x:â„¤ | x = 2} â†’ {y:â„¤ | true} â†’ {z:ğ”¹ | z = false}
f14 : {x:â„¤ | true} â†’ {y:â„¤ | y = 1} â†’ {z:ğ”¹ | z = true âŸº x = 1}
f15 : {x:â„¤ | true} â†’ {y:â„¤ | y = 2} â†’ {z:ğ”¹ | z = false}
f16 : {x:â„¤ | x = 1} â†’ {y:â„¤ | y = 1} â†’ {z:ğ”¹ | z = true}
f17 : {x:â„¤ | x â‰  1} â†’ {y:â„¤ | true} â†’ {z:ğ”¹ | z = false}
f18 : {x:â„¤ | x = 1} â†’ {y:â„¤ | y = 1} â†’ {z:ğ”¹ | z = true}
f19 : {x:â„¤ | x = 2} â†’ {y:â„¤ | false} â†’ {z:ğ”¹ | z = true}
f20 : {x:â„¤ | x = 1} â†’ {y:â„¤ | y â‰  1} â†’ {z:ğ”¹ | z = false}
f21 : {x:â„¤ | x = 2} â†’ {y:â„¤ | true} â†’ {z:ğ”¹ | z = false}
f22 : {x:â„¤ | x = 1} â†’ {y:â„¤ | y = 1} â†’ {z:ğ”¹ | z = true}
f23 : {x:â„¤ | false} â†’ {y:â„¤ | y = 2} â†’ {z:ğ”¹ | z = true}
f24 : {x:â„¤ | x â‰  1} â†’ {y:â„¤ | y = 1} â†’ {z:ğ”¹ | z = false}
f25 : {x:â„¤ | true} â†’ {y:â„¤ | y = 2} â†’ {z:ğ”¹ | z = false}